--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "chess-web-api": "^1.0.14",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.4.1",
     "react": "^16.13.1",
